--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,23 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node dist/index.cjs",
+    "start": "node dist/index.js",
     "build": "tsup",
     "dev": "tsup --watch --onSuccess \"pnpm run start\""
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "mongodb": "^6.6.2",
+    "source-map-support": "^0.5.21",
+    "zod": "^3.23.8"
   }
 }
